--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="script.js" defer></script>
     <title>Library</title>
 </head>
 <body>
     <h1>My Library</h1>
 
     <div id="library-container">
-        
+
     </div>
     
 </body>
