display library; make form to add a book

--- a/index.html
+++ b/index.html
@@ -14,6 +14,31 @@
     <div id="library-container">
 
     </div>
+
+    <button>ADD A BOOK</button>
     
+    <form action="" method="get">
+        <div>
+            <label for="title">Title</label>
+            <input type="text" id="title">
+        </div>
+
+        <div>
+            <label for="author">Author</label>
+            <input type="text" id="author">
+        </div>
+
+        <div>
+            <label for="pages">Number of Pages</label>
+            <input type="number" id="pages">
+        </div>
+
+        <div>
+            <label for="read">Read</label>
+            <input type="checkbox" id="read">
+        </div>
+
+        <button>Add to Library</button>
+    </form>
 </body>
 </html>
