add event listener to change display of form

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     </div>
 
-    <button>ADD A BOOK</button>
+    <button id="add-book">ADD BOOK</button>
     
     <form action="" method="get">
         <div>
