add cancel add book button

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
             <input type="checkbox" id="read">
         </div>
 
-        <button>Add to Library</button>
+        <button type="submit">Add to Library</button>
+        <button id="cancel-add" type="button">Cancel</button>
     </form>
 </body>
 </html>
