move add book button into header

--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
     <title>Library</title>
 </head>
 <body>
-    <h1>My Library</h1>
+    <header>
+        <h1>My Library</h1>
+        <button id="add-book">ADD BOOK</button>
+    </header>
 
     <div id="library-container">
 
     </div>
-
-    <button id="add-book">ADD BOOK</button>
     
     <form action="" method="get">
         <div>
