wrap main content in main element

--- a/index.html
+++ b/index.html
@@ -14,33 +14,30 @@
         <button id="add-book">ADD BOOK</button>
     </header>
 
-    <div id="library-container">
-
-    </div>
-    
-    <form action="" method="get">
-        <div>
-            <label for="title">Title</label>
-            <input type="text" id="title">
+    <main>
+        <div id="library-container">
         </div>
-
-        <div>
-            <label for="author">Author</label>
-            <input type="text" id="author">
-        </div>
-
-        <div>
-            <label for="pages">Number of Pages</label>
-            <input type="number" id="pages">
-        </div>
-
-        <div>
-            <label for="read">Read</label>
-            <input type="checkbox" id="read">
-        </div>
-
-        <button type="submit">Add to Library</button>
-        <button id="cancel-add" type="button">Cancel</button>
-    </form>
+        
+        <form action="" method="get">
+            <div>
+                <label for="title">Title</label>
+                <input type="text" id="title">
+            </div>
+            <div>
+                <label for="author">Author</label>
+                <input type="text" id="author">
+            </div>
+            <div>
+                <label for="pages">Number of Pages</label>
+                <input type="number" id="pages">
+            </div>
+            <div>
+                <label for="read">Read</label>
+                <input type="checkbox" id="read">
+            </div>
+            <button type="submit">Add to Library</button>
+            <button id="cancel-add" type="button">Cancel</button>
+        </form>
+    </main>
 </body>
 </html>
