add footer element

--- a/index.html
+++ b/index.html
@@ -39,5 +39,7 @@
             <button id="cancel-add" type="button">Cancel</button>
         </form>
     </main>
+
+    <footer>Copyright &copy; 2023 Elizabeth Karr via The Odin Project</footer>
 </body>
 </html>
