--- a/index.html
+++ b/index.html
@@ -19,24 +19,27 @@
         </div>
         
         <form action="" method="get">
-            <div>
+            <div class="text">
                 <label for="title">Title</label>
                 <input type="text" id="title">
             </div>
-            <div>
+            <div class="text">
                 <label for="author">Author</label>
                 <input type="text" id="author">
             </div>
-            <div>
-                <label for="pages">Number of Pages</label>
+            <div class="text">
+                <label for="pages">Pages</label>
                 <input type="number" id="pages">
             </div>
-            <div>
+            <div class="checkbox">
                 <label for="read">Read</label>
                 <input type="checkbox" id="read">
             </div>
-            <button type="submit">Add to Library</button>
-            <button id="cancel-add" type="button">Cancel</button>
+
+            <div>
+                <button type="submit">Add to Library</button>
+                <button id="cancel-add" type="button">Cancel</button>
+            </div>
         </form>
     </main>
 
