change form inputs to required

--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
         <form action="" method="get">
             <div class="text">
                 <label for="title">Title</label>
-                <input type="text" id="title">
+                <input type="text" id="title" required>
             </div>
             <div class="text">
                 <label for="author">Author</label>
-                <input type="text" id="author">
+                <input type="text" id="author" required>
             </div>
             <div class="text">
                 <label for="pages">Pages</label>
-                <input type="number" id="pages">
+                <input type="number" id="pages" required>
             </div>
             <div class="checkbox">
                 <label for="read">Read</label>
