display empty div if library array is length 0

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </header>
 
     <main>
+        <div id="empty">No books to display</div>
         <div id="library-container">
         </div>
         
